--- a/package.json
+++ b/package.json
@@ -3,9 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/react": "^16.9.9",
+    "@types/react-dom": "^16.9.2",
+    "@types/react-select": "^3.0.5",
+    "@types/styled-components": "^4.1.19",
+    "history": "^4.10.1",
+    "mobx-react-lite": "^1.5.0",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
-    "react-scripts": "3.2.0"
+    "react-icons": "^3.7.0",
+    "react-scripts": "3.2.0",
+    "react-select": "^3.0.8",
+    "styled-components": "^4.4.0",
+    "typescript": "^3.6.4"
   },
   "scripts": {
     "start": "react-scripts start",
