--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "@types/react-select": "^3.0.5",
     "@types/styled-components": "^4.1.19",
     "history": "^4.10.1",
+    "mobx": "^5.14.2",
     "mobx-react-lite": "^1.5.0",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-icons": "^3.7.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "react-select": "^3.0.8",
     "styled-components": "^4.4.0",
