--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@types/react-dom": "^16.9.2",
     "@types/react-select": "^3.0.5",
     "@types/styled-components": "^4.1.19",
+    "formik": "^2.0.3",
     "history": "^4.10.1",
     "mobx": "^5.14.2",
     "mobx-react-lite": "^1.5.0",
@@ -16,6 +17,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "react-select": "^3.0.8",
+    "react-tiny-popover": "^3.4.5",
     "styled-components": "^4.4.0",
     "typescript": "^3.6.4"
   },
