--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@types/react-select": "^3.0.5",
     "@types/styled-components": "^4.1.19",
     "formik": "^2.0.3",
+    "formik-persist": "^1.1.0",
     "history": "^4.10.1",
     "mobx": "^5.14.2",
     "mobx-react-lite": "^1.5.0",
@@ -19,7 +20,8 @@
     "react-select": "^3.0.8",
     "react-tiny-popover": "^3.4.5",
     "styled-components": "^4.4.0",
-    "typescript": "^3.6.4"
+    "typescript": "^3.6.4",
+    "yup": "^0.27.0"
   },
   "scripts": {
     "start": "react-scripts start",
