--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "history": "^4.10.1",
     "mobx": "^5.14.2",
     "mobx-react-lite": "^1.5.0",
+    "object-mapper": "^6.0.1",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-icons": "^3.7.0",
