--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@types/react": "^16.9.9",
     "@types/react-dom": "^16.9.2",
     "@types/react-select": "^3.0.5",
+    "@types/react-transition-group": "^4.2.3",
     "@types/styled-components": "^4.1.19",
     "formik": "^2.0.3",
     "formik-persist": "^1.1.0",
