--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/node": "^12.12.14",
     "@types/react": "^16.9.9",
     "@types/react-dom": "^16.9.2",
     "@types/react-select": "^3.0.5",
     "@types/react-transition-group": "^4.2.3",
     "@types/styled-components": "^4.1.19",
+    "axios": "^0.19.0",
     "formik": "^2.0.3",
     "formik-persist": "^1.1.0",
     "history": "^4.10.1",
