--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@types/node": "^12.12.14",
     "@types/react": "^16.9.9",
     "@types/react-dom": "^16.9.2",
+    "@types/react-router": "^5.1.3",
     "@types/react-select": "^3.0.5",
     "@types/react-transition-group": "^4.2.3",
     "@types/styled-components": "^4.1.19",
@@ -15,6 +16,7 @@
     "history": "^4.10.1",
     "mobx": "^5.14.2",
     "mobx-react-lite": "^1.5.0",
+    "moment": "^2.24.0",
     "object-mapper": "^6.0.1",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
