--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "moment": "^2.24.0",
     "object-mapper": "^6.0.1",
     "react": "^16.10.2",
+    "react-dates": "^21.5.0",
     "react-dom": "^16.10.2",
     "react-icons": "^3.7.0",
     "react-router-dom": "^5.1.2",
