--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mobx": "^5.14.2",
     "mobx-react-lite": "^1.5.0",
     "moment": "^2.24.0",
+    "moneysafe": "^2.2.0",
     "object-mapper": "^6.0.1",
     "react": "^16.10.2",
     "react-dates": "^21.5.0",
