--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dates": "^21.5.0",
     "react-dom": "^16.10.2",
     "react-icons": "^3.7.0",
+    "react-modal": "^3.11.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "react-select": "^3.0.8",
