--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "moneysafe": "^2.2.0",
     "object-mapper": "^6.0.1",
     "react": "^16.10.2",
+    "react-aria-menubutton": "^6.2.0",
     "react-dates": "^21.5.0",
     "react-dom": "^16.10.2",
     "react-icons": "^3.7.0",
