--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-aria-menubutton": "^6.2.0",
     "react-dates": "^21.5.0",
     "react-dom": "^16.10.2",
+    "react-flatpickr": "^3.9.1",
     "react-icons": "^3.7.0",
     "react-modal": "^3.11.1",
     "react-router-dom": "^5.1.2",
