--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "react-scripts": "3.2.0",
     "react-select": "^3.0.8",
     "react-tiny-popover": "^3.4.5",
+    "react-use": "^13.12.2",
+    "react-use-previous": "^1.0.0",
     "styled-components": "^4.4.0",
     "typescript": "^3.6.4",
     "yup": "^0.27.0"
