--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "object-mapper": "^6.0.1",
     "react": "^16.10.2",
     "react-aria-menubutton": "^6.2.0",
+    "react-autosuggest": "^9.4.3",
     "react-dates": "^21.5.0",
     "react-dom": "^16.10.2",
     "react-flatpickr": "^3.9.1",
