--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -20,7 +20,23 @@
         "webpack": "^3.8.1"
     },
     "dependencies": {
+        "@types/bluebird": "^3.5.29",
+        "@types/node": "^13.1.1",
+        "@types/validator": "^12.0.1",
+        "apollo-server": "^2.9.15",
+        "apollo-server-express": "^2.9.15",
+        "body-parser": "^1.19.0",
+        "cors": "^2.8.5",
+        "dotenv": "^8.2.0",
         "express": "^4.17.1",
+        "graphql": "^14.5.8",
+        "pg": "^7.17.0",
+        "pg-hstore": "^2.3.3",
+        "pg-native": "^3.0.0",
+        "reflect-metadata": "^0.1.13",
+        "sequelize": "^5.21.3",
+        "sequelize-cli": "^5.5.1",
+        "sequelize-typescript": "^1.1.0",
         "shared": "file:../shared"
     }
 }
