--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -17,7 +17,8 @@
         "npm-run-all": "^4.1.1",
         "ts-loader": "^3.0.5",
         "typescript": "^2.5.3",
-        "webpack": "^3.8.1"
+        "webpack": "^3.8.1",
+        "webpack-node-externals": "^1.7.2"
     },
     "dependencies": {
         "@types/bluebird": "^3.5.29",
@@ -28,6 +29,7 @@
         "body-parser": "^1.19.0",
         "cors": "^2.8.5",
         "dotenv": "^8.2.0",
+        "dotenv-webpack": "^1.7.0",
         "express": "^4.17.1",
         "graphql": "^14.5.8",
         "pg": "^7.17.0",
