--- a/packages/api/tsconfig.json
+++ b/packages/api/tsconfig.json
@@ -7,8 +7,8 @@
         "target": "ES6",
         "experimentalDecorators": true,
         "emitDecoratorMetadata": true,
+        "skipLibCheck": true,
         "allowSyntheticDefaultImports": true,
-        "esModuleInterop": true,
         "baseUrl": ".",
         "sourceMap": true,
         "allowJs": true,
