--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -32,6 +32,7 @@
         "dotenv-webpack": "^1.7.0",
         "express": "^4.17.1",
         "graphql": "^14.5.8",
+        "graphql-iso-date": "^3.6.1",
         "pg": "^7.17.0",
         "pg-hstore": "^2.3.3",
         "pg-native": "^3.0.0",
