Add invoice adding endpoint

--- a/packages/api/tsconfig.json
+++ b/packages/api/tsconfig.json
@@ -14,7 +14,7 @@
         "allowJs": true,
         "lib": ["es2015", "dom"],
         "paths": {
-            "*": ["node_modules/*"]
+            "shared/*": ["../shared/*"]
         }
     }
 }
