--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -28,18 +28,19 @@
         "apollo-server-express": "^2.9.15",
         "body-parser": "^1.19.0",
         "cors": "^2.8.5",
+        "currency.js": "^1.2.2",
         "dotenv": "^8.2.0",
         "dotenv-webpack": "^1.7.0",
         "express": "^4.17.1",
         "graphql": "^14.5.8",
         "graphql-iso-date": "^3.6.1",
+        "moneysafe": "^2.2.1",
         "pg": "^7.17.0",
         "pg-hstore": "^2.3.3",
         "pg-native": "^3.0.0",
         "reflect-metadata": "^0.1.13",
         "sequelize": "^5.21.3",
         "sequelize-cli": "^5.5.1",
-        "sequelize-typescript": "^1.1.0",
-        "shared": "file:../shared"
+        "sequelize-typescript": "^1.1.0"
     }
 }
