Create custom resolvers

--- a/packages/api/.env
+++ b/packages/api/.env
@@ -2,3 +2,8 @@ DB_NAME=warehop
 DB_USER=postgres
 DB_PASSWORD=password
 DB_HOST=localhost
+
+JWT_SECRET=9c8e3332bb621703b706819e3b25c7b7jro24bfjsdna4i80239fhdj38
+
+GOOGLE_CLIENT_ID=381862758463-qunrqhar3sft3a0n96kda054hl41tqbc.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=ugNoXQsEsiWYzswo1F-Sjm-7
