--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -23,6 +23,7 @@
     "dependencies": {
         "@types/bluebird": "^3.5.29",
         "@types/node": "^13.1.1",
+        "@types/passport": "^1.0.2",
         "@types/validator": "^12.0.1",
         "apollo-server": "^2.9.15",
         "apollo-server-express": "^2.9.15",
@@ -34,7 +35,12 @@
         "express": "^4.17.1",
         "graphql": "^14.5.8",
         "graphql-iso-date": "^3.6.1",
+        "graphql-tag": "^2.10.1",
+        "jsonwebtoken": "^8.5.1",
         "moneysafe": "^2.2.1",
+        "passport": "^0.4.1",
+        "passport-google-token": "^0.1.2",
+        "passport-jwt": "^4.0.0",
         "pg": "^7.17.0",
         "pg-hstore": "^2.3.3",
         "pg-native": "^3.0.0",
