--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -21,7 +21,10 @@
         "webpack-node-externals": "^1.7.2"
     },
     "dependencies": {
+        "@hapi/joi": "^17.0.0",
         "@types/bluebird": "^3.5.29",
+        "@types/hapi__joi": "^16.0.6",
+        "@types/joi": "^14.3.4",
         "@types/node": "^13.1.1",
         "@types/passport": "^1.0.2",
         "@types/validator": "^12.0.1",
