--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -10,9 +10,11 @@
     "@types/react-select": "^3.0.5",
     "@types/react-transition-group": "^4.2.3",
     "@types/styled-components": "^4.1.19",
+    "apollo-boost": "^0.4.7",
     "axios": "^0.19.0",
     "formik": "^2.0.3",
     "formik-persist": "^1.1.0",
+    "graphql": "^14.5.8",
     "history": "^4.10.1",
     "mobx": "^5.14.2",
     "mobx-react-lite": "^1.5.0",
@@ -35,7 +37,6 @@
     "react-tiny-popover": "^3.4.5",
     "react-use": "^13.12.2",
     "react-use-previous": "^1.0.0",
-    "shared": "file:../shared",
     "styled-components": "^4.4.0",
     "typescript": "^3.6.4",
     "yup": "^0.27.0"
