--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -12,6 +12,7 @@
     "@types/styled-components": "^4.1.19",
     "apollo-boost": "^0.4.7",
     "axios": "^0.19.0",
+    "currency.js": "^1.2.2",
     "formik": "^2.0.3",
     "formik-persist": "^1.1.0",
     "graphql": "^14.5.8",
