--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -64,6 +64,7 @@
     ]
   },
   "devDependencies": {
+    "@types/mobx-task": "^2.0.1",
     "react-app-rewire-babel-loader": "^0.1.1",
     "react-app-rewired": "^2.1.5",
     "tslint": "^5.20.1"
