--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -27,6 +27,7 @@
         "@types/joi": "^14.3.4",
         "@types/node": "^13.1.1",
         "@types/passport": "^1.0.2",
+        "@types/sequelize": "^4.28.8",
         "@types/validator": "^12.0.1",
         "apollo-server": "^2.9.15",
         "apollo-server-express": "^2.9.15",
