--- a/packages/api/tsconfig.json
+++ b/packages/api/tsconfig.json
@@ -14,6 +14,7 @@
         "allowJs": true,
         "lib": ["es2015", "dom"],
         "paths": {
+            "shared": ["../shared"],
             "shared/*": ["../shared/*"]
         }
     }
