--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,72 +1,74 @@
 {
-  "name": "ui",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@types/node": "^12.12.14",
-    "@types/react": "^16.9.9",
-    "@types/react-dom": "^16.9.2",
-    "@types/react-router": "^5.1.3",
-    "@types/react-select": "^3.0.5",
-    "@types/react-transition-group": "^4.2.3",
-    "@types/styled-components": "^4.1.19",
-    "apollo-boost": "^0.4.7",
-    "axios": "^0.19.0",
-    "currency.js": "^1.2.2",
-    "formik": "^2.0.3",
-    "formik-persist": "^1.1.0",
-    "graphql": "^14.5.8",
-    "history": "^4.10.1",
-    "mobx": "^5.14.2",
-    "mobx-react-lite": "^1.5.0",
-    "mobx-task": "^2.0.0",
-    "moment": "^2.24.0",
-    "moneysafe": "^2.2.0",
-    "object-mapper": "^6.0.1",
-    "react": "^16.10.2",
-    "react-app-rewired": "^2.1.5",
-    "react-aria-menubutton": "^6.2.0",
-    "react-autosuggest": "^9.4.3",
-    "react-dates": "^21.5.0",
-    "react-dom": "^16.10.2",
-    "react-flatpickr": "^3.9.1",
-    "react-icons": "^3.7.0",
-    "react-modal": "^3.11.1",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0",
-    "react-select": "^3.0.8",
-    "react-tiny-popover": "^3.4.5",
-    "react-use": "^13.12.2",
-    "react-use-previous": "^1.0.0",
-    "styled-components": "^4.4.0",
-    "typescript": "^3.6.4",
-    "yup": "^0.27.0"
-  },
-  "scripts": {
-    "start": "react-app-rewired start",
-    "build": "react-app-rewired build",
-    "test": "react-app-rewired test --env=jsdom",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "@types/mobx-task": "^2.0.1",
-    "react-app-rewire-babel-loader": "^0.1.1",
-    "react-app-rewired": "^2.1.5",
-    "tslint": "^5.20.1"
-  }
+    "name": "ui",
+    "version": "0.1.0",
+    "private": true,
+    "dependencies": {
+        "@types/node": "^12.12.14",
+        "@types/react": "^16.9.9",
+        "@types/react-dom": "^16.9.2",
+        "@types/react-router": "^5.1.3",
+        "@types/react-select": "^3.0.5",
+        "@types/react-transition-group": "^4.2.3",
+        "@types/styled-components": "^4.1.19",
+        "apollo-boost": "^0.4.7",
+        "axios": "^0.19.0",
+        "currency.js": "^1.2.2",
+        "formik": "^2.0.3",
+        "formik-persist": "^1.1.0",
+        "graphql": "^14.5.8",
+        "history": "^4.10.1",
+        "mobx": "^5.14.2",
+        "mobx-react-lite": "^1.5.0",
+        "mobx-task": "^2.0.0",
+        "moment": "^2.24.0",
+        "moneysafe": "^2.2.0",
+        "object-mapper": "^6.0.1",
+        "react": "^16.10.2",
+        "react-app-rewired": "^2.1.5",
+        "react-aria-menubutton": "^6.2.0",
+        "react-autosuggest": "^9.4.3",
+        "react-dates": "^21.5.0",
+        "react-dom": "^16.10.2",
+        "react-flatpickr": "^3.9.1",
+        "react-icons": "^3.7.0",
+        "react-modal": "^3.11.1",
+        "react-router-dom": "^5.1.2",
+        "react-scripts": "3.2.0",
+        "react-select": "^3.0.8",
+        "react-tiny-popover": "^3.4.5",
+        "react-use": "^13.12.2",
+        "react-use-previous": "^1.0.0",
+        "styled-components": "^4.4.0",
+        "typescript": "^3.6.4",
+        "shared": "0.1.0",
+        "yup": "^0.27.0"
+    },
+    "scripts": {
+        "start": "react-app-rewired start",
+        "watch": "react-app-rewired start",
+        "build": "react-app-rewired build",
+        "test": "react-app-rewired test --env=jsdom",
+        "eject": "react-scripts eject"
+    },
+    "eslintConfig": {
+        "extends": "react-app"
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    },
+    "devDependencies": {
+        "@types/mobx-task": "^2.0.1",
+        "react-app-rewire-babel-loader": "^0.1.1",
+        "react-app-rewired": "^2.1.5",
+        "tslint": "^5.20.1"
+    }
 }
