--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -38,9 +38,9 @@
         "react-tiny-popover": "^3.4.5",
         "react-use": "^13.12.2",
         "react-use-previous": "^1.0.0",
+        "shared": "0.1.0",
         "styled-components": "^4.4.0",
         "typescript": "^3.6.4",
-        "shared": "0.1.0",
         "yup": "^0.27.0"
     },
     "scripts": {
@@ -69,6 +69,7 @@
         "@types/mobx-task": "^2.0.1",
         "react-app-rewire-babel-loader": "^0.1.1",
         "react-app-rewired": "^2.1.5",
+        "tsconfig-paths-webpack-plugin": "^3.2.0",
         "tslint": "^5.20.1"
     }
 }
