--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -6,7 +6,6 @@
     "scripts": {
         "start": "npm-run-all --parallel watch:server watch:build",
         "watch": "npm-run-all --parallel watch:server watch:build",
-        "test-cmd": "ts-node-dev --project tsconfig.json ./src/index.ts",
         "watch:server": "nodemon \"./build/bundle.js\" --watch \"./build\" ",
         "watch:build": "webpack --watch",
         "build": "webpack",
@@ -19,6 +18,7 @@
         "npm-run-all": "^4.1.1",
         "ts-loader": "^3.0.5",
         "ts-node-dev": "^1.0.0-pre.44",
+        "tsconfig-paths-webpack-plugin": "^3.2.0",
         "typescript": "^2.5.3",
         "webpack": "^3.8.1",
         "webpack-node-externals": "^1.7.2"
@@ -26,7 +26,7 @@
     "dependencies": {
         "@hapi/joi": "^17.0.0",
         "@types/bluebird": "^3.5.29",
-        "@types/hapi__joi": "^16.0.6",
+        "@types/hapi__joi": "16.0.6",
         "@types/joi": "^14.3.4",
         "@types/node": "^13.1.1",
         "@types/passport": "^1.0.2",
