--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -32,6 +32,7 @@
         "@types/passport": "^1.0.2",
         "@types/sequelize": "^4.28.8",
         "@types/validator": "^12.0.1",
+        "apollo-errors": "^1.9.0",
         "apollo-server": "^2.9.15",
         "apollo-server-express": "^2.9.15",
         "body-parser": "^1.19.0",
