--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -24,6 +24,7 @@
         "moneysafe": "^2.2.0",
         "object-mapper": "^6.0.1",
         "react": "^16.10.2",
+        "react-app-rewire-babel-loader": "^0.1.1",
         "react-app-rewired": "^2.1.5",
         "react-aria-menubutton": "^6.2.0",
         "react-autosuggest": "^9.4.3",
