Add front-end error components

--- a/packages/tsconfig.json
+++ b/packages/tsconfig.json
@@ -5,7 +5,8 @@
         "paths": {
             "@shared/src": ["shared/src/index.ts"],
             "@shared/errors": ["shared/src/errors/index.ts"],
-            "@shared/types": ["shared/src/types/index.d.ts"]
+            "@shared/types": ["shared/src/types/index.d.ts"],
+            "@ui/*": ["ui/src/*"]
         }
     }
 }
