--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -3,15 +3,17 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@types/color": "^3.0.1",
         "@types/node": "^12.12.14",
         "@types/react": "^16.9.9",
         "@types/react-dom": "^16.9.2",
         "@types/react-router": "^5.1.3",
         "@types/react-select": "^3.0.5",
         "@types/react-transition-group": "^4.2.3",
-        "@types/styled-components": "^4.1.19",
+        "@types/styled-components": "^4.4.2",
         "apollo-boost": "^0.4.7",
         "axios": "^0.19.0",
+        "color": "^3.1.2",
         "currency.js": "^1.2.2",
         "formik": "^2.0.3",
         "formik-persist": "^1.1.0",
