--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -45,6 +45,7 @@
         "graphql-iso-date": "^3.6.1",
         "graphql-tag": "^2.10.1",
         "jsonwebtoken": "^8.5.1",
+        "kill-port": "^1.6.0",
         "moneysafe": "^2.2.1",
         "passport": "^0.4.1",
         "passport-google-token": "^0.1.2",
