--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -12,6 +12,7 @@
         "@types/react-transition-group": "^4.2.3",
         "@types/styled-components": "^4.4.2",
         "apollo-boost": "^0.4.7",
+        "apollo-boost-upload": "^1.0.1",
         "axios": "^0.19.0",
         "color": "^3.1.2",
         "currency.js": "^1.2.2",
