--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -1,63 +1,64 @@
 {
-    "name": "api",
-    "version": "1.0.0",
-    "description": "",
-    "main": "index.ts",
-    "scripts": {
-        "start": "npm-run-all --parallel watch:server watch:build",
-        "watch": "npm-run-all --parallel watch:server watch:build",
-        "watch:server": "nodemon \"./build/bundle.js\" --watch \"./build\" ",
-        "watch:build": "webpack --watch",
-        "build": "webpack",
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "author": "",
-    "license": "ISC",
-    "devDependencies": {
-        "nodemon": "^1.12.1",
-        "npm-run-all": "^4.1.1",
-        "ts-loader": "^3.0.5",
-        "ts-node-dev": "^1.0.0-pre.44",
-        "tsconfig-paths-webpack-plugin": "^3.2.0",
-        "typescript": "^2.5.3",
-        "webpack": "^3.8.1",
-        "webpack-node-externals": "^1.7.2"
-    },
-    "dependencies": {
-        "@hapi/joi": "^17.0.0",
-        "@types/bluebird": "^3.5.29",
-        "@types/hapi__joi": "16.0.6",
-        "@types/joi": "^14.3.4",
-        "@types/node": "^13.1.1",
-        "@types/passport": "^1.0.2",
-        "@types/sequelize": "^4.28.8",
-        "@types/validator": "^12.0.1",
-        "apollo-errors": "^1.9.0",
-        "apollo-server": "^2.9.15",
-        "apollo-server-express": "^2.9.15",
-        "body-parser": "^1.19.0",
-        "cors": "^2.8.5",
-        "currency.js": "^1.2.2",
-        "dotenv": "^8.2.0",
-        "dotenv-webpack": "^1.7.0",
-        "express": "^4.17.1",
-        "graphql": "^14.5.8",
-        "graphql-iso-date": "^3.6.1",
-        "graphql-tag": "^2.10.1",
-        "jsonwebtoken": "^8.5.1",
-        "kill-port": "^1.6.0",
-        "mkdirp": "^1.0.3",
-        "moneysafe": "^2.2.1",
-        "passport": "^0.4.1",
-        "passport-google-token": "^0.1.2",
-        "passport-jwt": "^4.0.0",
-        "pg": "^7.17.0",
-        "pg-hstore": "^2.3.3",
-        "pg-native": "^3.0.0",
-        "reflect-metadata": "^0.1.13",
-        "sequelize": "^5.21.3",
-        "sequelize-cli": "^5.5.1",
-        "sequelize-typescript": "^1.1.0",
-        "shared": "0.1.0"
-    }
+  "name": "api",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.ts",
+  "scripts": {
+    "start": "npm-run-all --parallel watch:server watch:build",
+    "watch": "npm-run-all --parallel watch:server watch:build",
+    "watch:server": "nodemon \"./build/bundle.js\" --watch \"./build\" ",
+    "watch:build": "webpack --watch",
+    "build": "webpack",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^2.0.2",
+    "nodemon-webpack-plugin": "^4.2.2",
+    "npm-run-all": "^4.1.1",
+    "ts-loader": "^3.0.5",
+    "ts-node-dev": "^1.0.0-pre.44",
+    "tsconfig-paths-webpack-plugin": "^3.2.0",
+    "typescript": "^2.5.3",
+    "webpack": "^3.8.1",
+    "webpack-node-externals": "^1.7.2"
+  },
+  "dependencies": {
+    "@hapi/joi": "^17.0.0",
+    "@types/bluebird": "^3.5.29",
+    "@types/hapi__joi": "16.0.6",
+    "@types/joi": "^14.3.4",
+    "@types/node": "^13.1.1",
+    "@types/passport": "^1.0.2",
+    "@types/sequelize": "^4.28.8",
+    "@types/validator": "^12.0.1",
+    "apollo-errors": "^1.9.0",
+    "apollo-server": "^2.9.15",
+    "apollo-server-express": "^2.9.15",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "currency.js": "^1.2.2",
+    "dotenv": "^8.2.0",
+    "dotenv-webpack": "^1.7.0",
+    "express": "^4.17.1",
+    "graphql": "^14.5.8",
+    "graphql-iso-date": "^3.6.1",
+    "graphql-tag": "^2.10.1",
+    "jsonwebtoken": "^8.5.1",
+    "kill-port": "^1.6.0",
+    "mkdirp": "^1.0.3",
+    "moneysafe": "^2.2.1",
+    "passport": "^0.4.1",
+    "passport-google-token": "^0.1.2",
+    "passport-jwt": "^4.0.0",
+    "pg": "^7.17.0",
+    "pg-hstore": "^2.3.3",
+    "pg-native": "^3.0.0",
+    "reflect-metadata": "^0.1.13",
+    "sequelize": "^5.21.3",
+    "sequelize-cli": "^5.5.1",
+    "sequelize-typescript": "^1.1.0",
+    "shared": "0.1.0"
+  }
 }
