--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -5,7 +5,7 @@
   "main": "index.ts",
   "scripts": {
     "start": "npm-run-all --parallel watch:server watch:build",
-    "watch": "npm-run-all --parallel watch:server watch:build",
+    "watch": "webpack --watch",
     "watch:server": "nodemon \"./build/bundle.js\" --watch \"./build\" ",
     "watch:build": "webpack --watch",
     "build": "webpack",
