--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -31,6 +31,8 @@
     "@types/joi": "^14.3.4",
     "@types/node": "^13.1.1",
     "@types/passport": "^1.0.2",
+    "@types/pug": "^2.0.4",
+    "@types/puppeteer": "^2.0.1",
     "@types/sequelize": "^4.28.8",
     "@types/validator": "^12.0.1",
     "apollo-errors": "^1.9.0",
@@ -55,6 +57,8 @@
     "pg": "^7.17.0",
     "pg-hstore": "^2.3.3",
     "pg-native": "^3.0.0",
+    "pug": "^2.0.4",
+    "puppeteer": "^2.1.1",
     "reflect-metadata": "^0.1.13",
     "sequelize": "^5.21.3",
     "sequelize-cli": "^5.5.1",
