--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -38,6 +38,7 @@
         "react-modal": "^3.11.1",
         "react-router-dom": "^5.1.2",
         "react-scripts": "3.2.0",
+        "react-scroll": "^1.7.16",
         "react-select": "^3.0.8",
         "react-tiny-popover": "^3.4.5",
         "react-use": "^13.12.2",
