--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -3,6 +3,7 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@apollo/react-hooks": "^3.1.4",
         "@types/color": "^3.0.1",
         "@types/node": "^12.12.14",
         "@types/react": "^16.9.9",
