--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -26,7 +26,9 @@
   },
   "dependencies": {
     "@hapi/joi": "^17.0.0",
+    "@types/axios": "^0.14.0",
     "@types/bluebird": "^3.5.29",
+    "@types/cheerio": "^0.22.18",
     "@types/hapi__joi": "16.0.6",
     "@types/joi": "^14.3.4",
     "@types/node": "^13.1.1",
@@ -38,7 +40,9 @@
     "apollo-errors": "^1.9.0",
     "apollo-server": "^2.9.15",
     "apollo-server-express": "^2.9.15",
+    "axios": "^0.19.2",
     "body-parser": "^1.19.0",
+    "cheerio": "^1.0.0-rc.3",
     "cors": "^2.8.5",
     "currency.js": "^1.2.2",
     "dotenv": "^8.2.0",
@@ -60,6 +64,7 @@
     "pg-native": "^3.0.0",
     "pug": "^2.0.4",
     "puppeteer": "^2.1.1",
+    "querystring": "^0.2.0",
     "reflect-metadata": "^0.1.13",
     "sequelize": "^5.21.3",
     "sequelize-cli": "^5.5.1",
